# frozen-core

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  error_decode.sh  fe_decode.py  shell.nix
.github/ISSUE_TEMPLATE/: bug_report.md  performance.md  suggestion.md
.github/PULL_REQUEST_TEMPLATE/: release.md  release_pr_template.md
.github/workflows/: release.yaml  tests.yaml
benches/: bpool.rs  bufpool.rs  crc32.rs  mpscq.rs  reservoir.rs  wpipe.rs
examples/: bp.rs  crc.rs  ff.rs  fm.rs  fp.rs  mq.rs
fe/: Cargo.toml
fe/src/: lib.rs
ff/: CHANGELOG.md  Cargo.toml
ff/src/: error.rs  lib.rs  linux.rs
fm/: CHANGELOG.md  Cargo.toml
fm/src/: error.rs  lib.rs  linux.rs
frozen_error/src/: lib.rs  main.rs
frozen_file/: Cargo.toml
hints/: Cargo.toml
src/: ack.rs  bpool.rs  bufpool.rs  crc.rs  crc32.rs  error.rs  fbits.rs  fe.rs  fpipe.rs  hints.rs  lib.rs  mpscq.rs  reservoir.rs  utils.rs  wpipe.rs
src/ff/: linux.rs  mod.rs  posix.rs
src/ffile/: mod.rs  posix.rs
src/fm/: linux.rs  mod.rs  posix.rs
src/fmmap/: mod.rs  posix.rs
tests/: ff.rs
