[package]
edition = "2024"
name = "frozen_core"
version = "0.0.13"
exclude = ["shell.nix"]
description = "Custom implementations and core utilities for frozen-lab crates"
readme = "README.md"
keywords = [
    "frozen-lab",
    "frozen-core",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/frozen-lab/frozen-core"

[features]
bpool = ["error"]
crc32 = []
default = []
error = []
ffile = [
    "libc",
    "error",
    "hints",
]
fmmap = [
    "libc",
    "error",
    "hints",
    "ffile",
]
fpipe = [
    "error",
    "ffile",
    "bpool",
    "hints",
]
hints = []
mpscq = []

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.178", optional = true }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2.178"

[dev-dependencies]
tempfile = "3.20.0"
