[package]
edition = "2024"
version = "0.0.17"
name = "frozen-core"
exclude = ["shell.nix"]
description = "Custom implementations and core utilities for frozen-lab crates"
readme = "README.md"
keywords = [
    "frozen-lab",
    "frozen-core",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/frozen-lab/frozen-core"

[profile.release]
codegen-units = 1
lto = "fat"
incremental = false
opt-level = 3

[profile.bench]
inherits = "release"

[features]
crc32 = []
error = []
hints = []
mpscq = []
default = []
bpool = ["error"]
ffile = [
    "libc",
    "error",
    "hints",
]
fmmap = [
    "libc",
    "error",
    "hints",
    "ffile",
]
fpipe = [
    "error",
    "ffile",
    "bpool",
    "hints",
]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.178", optional = true }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2.178"

[dev-dependencies]
tempfile = "3.20.0"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "crc32"
harness = false
required-features = ["crc32"]
