[package]
edition = "2024"
version = "0.0.22"
name = "frozen-core"
description = "Custom implementations and core utilities for frozen-lab crates"
readme = "README.md"
keywords = [
    "frozen-lab",
    "frozen-core",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/frozen-lab/frozen-core"
exclude = [
    ".github/",
    "shell.nix",
    "SECURITY.md",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
]

[profile.release]
codegen-units = 1
lto = "fat"
incremental = false
opt-level = 3

[profile.bench]
inherits = "release"

[features]
crc32 = []
error = []
hints = []
mpscq = []
bufpool = ["error", "hints"]
wpipe = [
    "error",
    "ffile",
    "mpscq",
    "hints",
    "bufpool",
    "futures",
]
ffile = [
    "libc",
    "error",
    "hints",
]
fmmap = [
    "libc",
    "error",
    "hints",
    "ffile",
]
default = [
    "error",
    "hints",
    "mpscq",
    "crc32",
    "bufpool",
    "ffile",
    "fmmap",
    "wpipe",
]

[dependencies]
futures = {version = "0.3.32", optional = true}

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.178", optional = true }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2.178"

[dev-dependencies]
tempfile = "3.20.0"
hdrhistogram = "7.5.4"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "crc32"
harness = false
required-features = ["crc32"]

[[bench]]
name = "bufpool"
harness = false
required-features = ["bufpool"]

[[bench]]
name = "mpscq"
harness = false
required-features = ["mpscq"]

[[bench]]
name = "wpipe"
harness = false
required-features = ["wpipe"]
